#
# Python CMakeLists
# -----------------
#
# A CMakeLists which should be good enough to run Python in an IDE which uses
# a CMake building system. Assumes that version.h is already present, hence you
# will need to build Python first using the provided Makefile for this to work
# correctly in an IDE.
#
# TODO: make building via CMake possible -- i.e. version.h, GSL etc
#

cmake_minimum_required(VERSION 3.10)
project(python C)

# Set the C standard, compiler and compiler options
set(CMAKE_C_STANDARD 90)
set(CMAKE_C_COMPILER mpicc)
add_definitions(-D MPI_ON)

# Include the source
include_directories(inc)
link_directories(lib)

# Define the executables
add_executable(python
        source/rdpar_init.c
        source/bb.c
        source/get_atomicdata.c
        source/python.c
        source/photon2d.c
        source/photon_gen.c
        source/parse.c
        source/saha.c
        source/spectra.c
        source/wind2d.c
        source/wind.c
        source/vvector.c
        source/recipes.c
        source/trans_phot.c
        source/phot_util.c
        source/resonate.c
        source/radiation.c
        source/setup_files.c
        source/wind_updates2d.c
        source/windsave.c
        source/extract.c
        source/cdf.c
        source/roche.c
        source/random.c
        source/stellar_wind.c
        source/homologous.c
        source/hydro_import.c
        source/corona.c
        source/knigge.c
        source/disk.c
        source/lines.c
        source/continuum.c
        source/emission.c
        source/cooling.c
        source/recomb.c
        source/diag.c
        source/sv.c
        source/ionization.c
        source/levels.c
        source/gradv.c
        source/reposition.c
        source/anisowind.c
        source/density.c
        source/bands.c
        source/time.c
        source/matom.c
        source/estimators.c
        source/wind_sum.c
        source/cylindrical.c
        source/rtheta.c
        source/spherical.c
        source/cylind_var.c
        source/bilinear.c
        source/gridwind.c
        source/partition.c
        source/signal.c
        source/agn.c
        source/shell_wind.c
        source/compton.c
        source/zeta.c
        source/dielectronic.c
        source/spectral_estimators.c
        source/matom_diag.c
        source/direct_ion.c
        source/pi_rates.c
        source/matrix_ion.c
        source/para_update.c
        source/setup_star_bh.c
        source/setup_domains.c
        source/setup_disk.c
        source/photo_gen_matom.c
        source/macro_gov.c
        source/windsave2table_sub.c
        source/import.c
        source/import_spherical.c
        source/import_cylindrical.c
        source/import_rtheta.c
        source/reverb.c
        source/paths.c
        source/setup.c
        source/run.c
        source/brem.c
        source/synonyms.c
        source/setup_reverb.c
        source/rdpar.c
        source/xlog.c
        source/log.h
        source/get_models.c
        source/setup_line_transfer.c
        source/cv.c
        source/wind_util.c
        source/import.h)

add_executable(py_wind
        source/bb.c
        source/get_atomicdata.c
        source/photon2d.c
        source/photon_gen.c
        source/parse.c
        source/saha.c
        source/spectra.c
        source/wind2d.c
        source/wind.c
        source/vvector.c
        source/recipes.c
        source/trans_phot.c
        source/phot_util.c
        source/resonate.c
        source/radiation.c
        source/setup_files.c
        source/wind_updates2d.c
        source/windsave.c
        source/extract.c
        source/cdf.c
        source/roche.c
        source/random.c
        source/stellar_wind.c
        source/homologous.c
        source/hydro_import.c
        source/corona.c
        source/knigge.c
        source/disk.c
        source/lines.c
        source/continuum.c
        source/emission.c
        source/cooling.c
        source/recomb.c
        source/diag.c
        source/sv.c
        source/ionization.c
        source/levels.c
        source/gradv.c
        source/reposition.c
        source/anisowind.c
        source/density.c
        source/bands.c
        source/time.c
        source/matom.c
        source/estimators.c
        source/wind_sum.c
        source/cylindrical.c
        source/rtheta.c
        source/spherical.c
        source/cylind_var.c
        source/bilinear.c
        source/gridwind.c
        source/partition.c
        source/signal.c
        source/agn.c
        source/shell_wind.c
        source/compton.c
        source/zeta.c
        source/dielectronic.c
        source/spectral_estimators.c
        source/matom_diag.c
        source/direct_ion.c
        source/pi_rates.c
        source/matrix_ion.c
        source/para_update.c
        source/setup_star_bh.c
        source/setup_domains.c
        source/setup_disk.c
        source/photo_gen_matom.c
        source/macro_gov.c
        source/windsave2table_sub.c
        source/import.c
        source/import_spherical.c
        source/import_cylindrical.c
        source/import_rtheta.c
        source/reverb.c
        source/paths.c
        source/setup.c
        source/run.c
        source/brem.c
        source/synonyms.c
        source/setup_reverb.c
        source/rdpar.c
        source/xlog.c
        source/log.h
        source/get_models.c
        source/py_wind.c
        source/py_wind_ion.c
        source/py_wind_macro.c
        source/py_wind_sub.c
        source/py_wind_write.c
        source/setup_line_transfer.c
        source/cv.c
        source/wind_util.c
        )

add_executable(windsave2table
        source/bb.c
        source/get_atomicdata.c
        source/photon2d.c
        source/photon_gen.c
        source/parse.c
        source/saha.c
        source/spectra.c
        source/wind2d.c
        source/wind.c
        source/vvector.c
        source/recipes.c
        source/trans_phot.c
        source/phot_util.c
        source/resonate.c
        source/radiation.c
        source/setup_files.c
        source/wind_updates2d.c
        source/windsave.c
        source/extract.c
        source/cdf.c
        source/roche.c
        source/random.c
        source/stellar_wind.c
        source/homologous.c
        source/hydro_import.c
        source/corona.c
        source/knigge.c
        source/disk.c
        source/lines.c
        source/continuum.c
        source/emission.c
        source/cooling.c
        source/recomb.c
        source/diag.c
        source/sv.c
        source/ionization.c
        source/levels.c
        source/gradv.c
        source/reposition.c
        source/anisowind.c
        source/density.c
        source/bands.c
        source/time.c
        source/matom.c
        source/estimators.c
        source/wind_sum.c
        source/cylindrical.c
        source/rtheta.c
        source/spherical.c
        source/cylind_var.c
        source/bilinear.c
        source/gridwind.c
        source/partition.c
        source/signal.c
        source/agn.c
        source/shell_wind.c
        source/compton.c
        source/zeta.c
        source/dielectronic.c
        source/spectral_estimators.c
        source/matom_diag.c
        source/direct_ion.c
        source/pi_rates.c
        source/matrix_ion.c
        source/para_update.c
        source/setup_star_bh.c
        source/setup_domains.c
        source/setup_disk.c
        source/photo_gen_matom.c
        source/macro_gov.c
        source/windsave2table_sub.c
        source/import.c
        source/import_spherical.c
        source/import_cylindrical.c
        source/import_rtheta.c
        source/reverb.c
        source/paths.c
        source/setup.c
        source/run.c
        source/brem.c
        source/synonyms.c
        source/setup_reverb.c
        source/rdpar.c
        source/xlog.c
        source/log.h
        source/get_models.c
        source/windsave2table.c
        source/windsave2table_sub.c
        source/setup_line_transfer.c
        source/cv.c
        source/wind_util.c
        )

# Include external libs
target_link_libraries(python gsl gslcblas m)
target_link_libraries(py_wind gsl gslcblas m)
target_link_libraries(windsave2table gsl gslcblas m)
